feat: added placeholder files to follow hexagonal architecture

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,19 @@
 spring:
   application:
   name: ecommerce hexagonal
+
+  jpa:
+    database: POSTGRESQL
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  datasource:
+    platform: postgres
+    url: jdbc:postgresql://localhost:5432/e-commerce
+    username: myuser
+    password: password
+    driver-class-name: org.postgresql.Driver
