feat: added kafka config and kafka producer config, added a producer

--- a/rest-api/src/main/resources/application.yaml
+++ b/rest-api/src/main/resources/application.yaml
@@ -17,3 +17,10 @@ spring:
     username: myuser
     password: password
     driver-class-name: org.postgresql.Driver
+
+  kafka:
+    bootstrap-servers: localhost:9092
+
+kafka:
+  topic:
+    name: e-commerce
