feat: added kafka listener config to rule-engine, recognises based on the header

--- a/rule-engine/src/main/resources/application.yaml
+++ b/rule-engine/src/main/resources/application.yaml
@@ -5,3 +5,10 @@ spring:
   application:
     name: Rule Engine
 
+  kafka:
+    bootstrap-servers: http://localhost:9092
+
+kafka:
+  topic:
+    name: e-commerce
+  group-id: order-processing-group
