feat: created new MakePaymentResponseDTO class, created new listener for the same

--- a/rest-api/src/main/resources/application.yaml
+++ b/rest-api/src/main/resources/application.yaml
@@ -24,4 +24,6 @@ spring:
 kafka:
   topic:
     name: e-commerce
-  group-id: order-processing-group-2
+  group-id:
+    offer: ecommerce-offer-group
+    apply-offer: ecommerce-apply-group
