--- a/docker/compile-ecommerce-projects/docker-compose.yml
+++ b/docker/compile-ecommerce-projects/docker-compose.yml
@@ -20,6 +20,35 @@ services:
       - db
       - kafka
       - zookeeper
+  rule-engine:
+    build:
+      context: ../..
+      dockerfile: ./rule-engine/Dockerfile
+    ports:
+      - "8081:8080"
+    container_name: ecommerce-rule-engine-container
+    restart: unless-stopped
+    environment:
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+
+    depends_on:
+      - kafka
+      - zookeeper
+
+  payment:
+    build:
+      context: ../..
+      dockerfile: ./ecommerce-payment/Dockerfile
+    ports:
+      - "8082:8080"
+    container_name: ecommerce-payment-container
+    restart: unless-stopped
+    environment:
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+
+    depends_on:
+      - kafka
+      - zookeeper
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.6.0
