--- a/dashboard-ui/dashboard-frontend/angular.json
+++ b/dashboard-ui/dashboard-frontend/angular.json
@@ -63,6 +63,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "dashboard-frontend:build",
+            "proxyConfig": "proxy.json"
+          },
           "configurations": {
             "production": {
               "buildTarget": "dashboard-frontend:build:production"
