--- a/dashboard-ui/dashboard-frontend/angular.json
+++ b/dashboard-ui/dashboard-frontend/angular.json
@@ -35,7 +35,9 @@
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": ["stpmjs"],
+            "preserveSymlinks": true
           },
           "configurations": {
             "production": {
