--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -53,6 +53,10 @@
 			<artifactId>mapstruct</artifactId>
 			<version>1.5.5.Final</version> <!-- Use latest version -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
