feat: created a new Ship project in kotlin, added all kafka functionality and intermediary DTO

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>rest-api</module>
         <module>rule-engine</module>
         <module>ecommerce-payment</module>
+        <module>ship-order</module>
     </modules>
 
     <properties>
