feat: Create a generic KafkaListener and kept all listener logic as a switch, added correlationId, eventTypeHeader and eventVersionHeader

--- a/rest-api/src/main/resources/application.yaml
+++ b/rest-api/src/main/resources/application.yaml
@@ -25,12 +25,4 @@ kafka:
   topic:
     name: e-commerce
   group-id:
-    create-order: ecommerce-create-order-group
-    check-offer: ecommerce-check-offer-group
-    evaluate-offer: ecommerce-evaluate-offer-group
-    apply-offer: ecommerce-apply-group
-    payment-order: ecommerce-payment-order
-    process-payment: ecommerce-process-payment
-    post-process: ecommerce-post-process-payment
-    ship-order: ecommerce-ship-order
-    deliver-order: ecommerce-deliver-order
+    order-events: ecommerce-order-events
